--- a/app/src/main/res/layout/unica_evento.xml
+++ b/app/src/main/res/layout/unica_evento.xml
@@ -1,65 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_marginBottom="6dp"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="6dp"
+    android:padding="16dp"
+    android:columnCount="2">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:padding="16dp">
+    <TextView
+        android:id="@+id/txt_eventoTitulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:text="blablabla"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_columnSpan="2"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:orientation="vertical"
-            android:paddingRight="8dp">
+    <TextView
+        android:id="@+id/Titulo_dataini"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:text="Data início: "
+        android:textSize="14sp"
+        android:layout_row="1"
+        android:layout_column="0"/>
 
-            <TextView
-                android:id="@+id/txt_eventoTitulo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:fontFamily="sans-serif-light"
-                android:textSize="12sp" />
+    <TextView
+        android:id="@+id/txt_eventoDataInicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:text="00/00/0000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_row="1"
+        android:layout_column="1" />
 
-            <TextView
-                android:id="@+id/txt_eventoDataInicio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+    <TextView
+        android:id="@+id/Titulo_horaini"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:text="Hora início: "
+        android:textSize="14sp"
+        android:layout_row="2"
+        android:layout_column="0"/>
 
-            <TextView
-                android:id="@+id/txt_eventoDataTermino"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+    <TextView
+        android:id="@+id/txt_eventoHoraInicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:text="00:00"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_row="2"
+        android:layout_column="1" />
 
-            <TextView
-                android:id="@+id/txt_eventoHoraInicio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+    <TextView
+        android:id="@+id/Titulo_dataterm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:text="Data término: "
+        android:textSize="14sp"
+        android:layout_row="3"
+        android:layout_column="0"/>
 
-            <TextView
-                android:id="@+id/txt_eventoHoraTermino"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+    <TextView
+        android:id="@+id/txt_eventoDataTermino"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:text="00/00/0000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_row="3"
+        android:layout_column="1" />
 
-        </LinearLayout>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/Titulo_horaterm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:text="Hora término: "
+        android:textSize="14sp"
+        android:layout_row="4"
+        android:layout_column="0"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/txt_eventoHoraTermino"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:text="00:00"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_row="4"
+        android:layout_column="1" />
+
+</GridLayout>
